--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 			  	 <br>			
 			<div id="orgEmail"></div><br>
 			<textarea id="emailForCopy" row="3"></textarea><br>
-                    <button class="btn" onclick="sendiMail()"><i class="fa fa-apple"></i> ใช้ iPhone</button>    
-                    <button class="btn" onclick="sendGmail()"><i class="fa fa-google"></i> ใช้ Gmail</button>
+                    <button class="btn" onclick="sendiMail()"><i class="fa fa-apple"></i> iPhone</button>    
+                    <button class="btn" onclick="sendGmail()"><i class="fa fa-google"></i> Gmail</button>
   		    <button class="btn" onclick="copyEmail()"><i class="fa fa-copy"></i> คัดลอกอีเมล</button>
                         
 			</div>
