--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<ul id="Answer">
    		<li><a href="#">
 			<form id="frm1">
-  				รหัสคำขอ<br><input type="text" name="yourCode" value="" size="35" placeholder="AA123456"> <br><br>
+  				รหัสคำขอ<br><input type="text" name="yourCode" value="" size="35" placeholder=""> <br><br>
 			</form> 
 			
 			<form id="frm3">
