--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/chat.js"></script>
     <script src="js/clock.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link rel="icon" type="image/png" href="images/krut.png" />
+    <link rel="icon" type="image/png" href="images/mnre.png" />
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
     <meta property="og:updated_time" content="1440432930" />
